--- a/schema/.env
+++ b/schema/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/localShopDelivery
+MONGO_URI=mongodb+srv://ashutoshpal646:Motog735g@cluster0.veluaxy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=supersecretkey123
 
